--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     display: flex;
     flex-direction: column;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .header,
@@ -17,6 +18,12 @@ body {
     align-items: center;
     padding: 10px;
     background-color: #1f2937;
+}
+
+.logo {
+    font-size: 24px;
+    color: #F9FAF8;
+    margin: 0px;
 }
 
 ul {
