Adjusted the styling of the image placeholder in sec1

--- a/styles.css
+++ b/styles.css
@@ -80,3 +80,10 @@ button {
     font-size: 18px;
     color: #E5E7EB;
 }
+
+.sec-right {
+    background-color: grey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
