Finished setting up img placeholders in sec2
Removed the img elements from sec2 and replaced them with empty div elements that have a blue border.

--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,15 @@ button {
     text-align: center;
 }
 
-.container img {
-    width: 200px;
-    height: 200px;
+.image {
+    width: 100px;
+    height: 100px;
+    border: solid #3882f6;
+    border-radius: 7px;
+}
+
+.images {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
