--- a/styles.css
+++ b/styles.css
@@ -5,23 +5,30 @@ body {
 }
 
 .header,
-.sec1,
-.sec3,
-.sec4,
 .footer,
-.imiddle {
+.icontainer {
     display: flex;
 }
 
+.ileft, .iright {
+    flex: 1 1 auto;
+}
+
+.imiddle {
+    flex: 2 1 auto;
+    width: 800px;
+}
+
 .header .imiddle {
+    display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px;
     background-color: #1f2937;
-    flex: 5 1 auto;
+    flex: 2 1 auto;
 }
 
-.header .ileft, .iright {
+.header .ileft, .header .iright {
     flex: 1 1 auto;
     background-color: #1f2937;
 }
@@ -70,8 +77,13 @@ button {
     border: 2px solid #3882f6;
 }
 
-.sec1 {
+.sec1 .imiddle {
+    display: flex;
     padding: 30px;
+    background-color: #1f2937;
+}
+
+.sec1 .ileft, .sec1 .iright {
     background-color: #1f2937;
 }
 
@@ -116,7 +128,10 @@ button {
     justify-content: center;
 }
 
-.sec3 {
+.sec3 .imiddle {
     background-color: #E5E7EB;
 
+}
+.sec3 .ileft, .sec3 .iright {
+    background-color: #E5E7EB;
 }
