--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,25 @@ button {
 
 .sec3 .imiddle {
     background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    padding: 80px 30px;
 }
 .sec3 .ileft, .sec3 .iright {
     background-color: #E5E7EB;
+}
+
+.quote {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    color: #1f2937;
+    margin: 0px;
+}
+
+.sec3 p {
+    margin: 0px;
+    align-self: flex-end;
+    font-weight: bold;
+    padding-right: 40px;
 }
