--- a/styles.css
+++ b/styles.css
@@ -26,11 +26,9 @@ body {
     justify-content: space-between;
     align-items: center;
     background-color: #1f2937;
-    flex: 2 1 auto;
 }
 
 .header .ileft, .header .iright {
-    flex: 1 1 auto;
     background-color: #1f2937;
 }
 
@@ -161,6 +159,7 @@ button {
     border-radius: 7px;
     display: flex;
     padding: 30px 50px;
+    gap: 100px;
 }
 
 .box .text {
@@ -178,9 +177,7 @@ button {
 
 .box .button {
     display: flex;
-    justify-content: center;
     align-items: center;
-    flex: auto;
 }
 
 .box button {
@@ -190,6 +187,8 @@ button {
 }
 
 .sec4 .imiddle {
+    display: flex;
+    justify-content: center;
     padding-top: 50px;
     padding-bottom: 50px;
 }
